tests/requests/invalid/rfc9112_target_relative_01.http
GET foo/bar HTTP/1.1\r\n
Host: example.com\r\n
\r\n
